Traversing improvements + tests

--- a/play/test.html
+++ b/play/test.html
@@ -30,10 +30,17 @@
             <p id="c1">fronthttp://slp.li/x/56b53ddee365a2380ca86cd1</p>
             <p id="c2">http://slp.li/x/56b53ddee365a2380ca86cd1zzz</p>
             <h3>404</h3>
-            <p id="e1">http://slp.li/x/56b53ddee365a2380ca86cd1back</p>
-            <p id="e2">http://slp.li/x/5681cab8da96b04654f50123</p>
+            <p id="e1">http://slp.li/x/56b53ddee365a2380c111111</p>
+            <p id="e2">http://slp.li/x/56b53ddee365a2380c111111zzz</p>
             <h3>Links</h3>
             <p id="l1"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">http://slp.li/x/56b53ddee365a2380ca86cd1</a></p>
+            <p id="l2"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">http://slp.li/x/56b5</a></p>
+            <p id="l3"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">http://slp.li/x/<wbr>56b53ddee365a2380ca86cd1</a></p>
+            <p id="l4"><a href="http://twitter.com" data-expanded-url="http://slp.li/x/56b53ddee365a2380ca86cd1">click here</a></p>
+            <p id="l5"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">one</a><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">two</a></p>
+            <p id="l6"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">one</a>two</p>
+            <h3>Editable links</h3>
+            <p id="el1" contenteditable="true"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">http://slp.li/x/56b53ddee365a2380ca86cd1</a></p>
             <h3>Public Keys</h3>
             <p id="pk1">http://slp.li/x/56b59cc6e365a2380ca86cd4</p>
           </div>
