--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -55,7 +55,21 @@
             </div><!-- clearText -->
             <div class="bottom">
               <span rv-show="clearText">
-                <button rv-show="hasSelectedKeys < selectedKeys" class="button" rv-disabled="wait" rv-on-click="sendMessage">Encrypt Message <span rv-show="wait"><i class="icon-spin5"></i></span></button>
+                <span rv-show="hasSelectedKeys < selectedKeys">
+                  <button class="button" rv-disabled="wait" rv-on-click="sendMessage">Encrypt Message <span rv-show="wait"><i class="icon-spin5"></i></span></button>
+                  <span class="expiration">
+                    <a rv-on-click="toggleExpiration" rv-hide="expirationShown">expiration</a>
+                    <small rv-show="expirationShown">
+                      <select rv-value="expiration">
+                        <option value="3600">1 hour</option>
+                        <option value="84600">1 day</option>
+                        <option value="">7 day</option>
+                        <option value="">30 days</option>
+                        <option value="0">no expiration</option>
+                      </select>
+                    </small>
+                  </span>
+                </span>
               </span>
               <span rv-hide="clearText">
                 <button rv-on-click="sendPublicKey" rv-disabled="wait" class="button">Share My Public Key <span rv-show="wait"><i class="icon-spin5"></i></span></button>
