--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -54,17 +54,6 @@
       </span>
     </script>
 
-    <script type="text/template" data-name="recepients" data-class="Recepients">
-      <label for="filter">Recepients:</label>
-      <ul class="selected-keys" rv-on-click="focus">
-        <li class="bead" rv-each-item="selected"><div class="name">{ item.getPrimaryUser }</div><div class="remove" rv-on-click="remove">✖</div></li>
-        <li><input id="ftr" class="filter" rv-value="filter" rv-on-keyup="search"></li>
-      </ul>
-      <ul class="found-keys" rv-show="hasFound < found">
-        <li rv-on-click="add" rv-each-item="found"><span>{ item.getPrimaryUser }</span></li>
-      </ul>
-    </script>
-
   </head>
   <body>
     <div id="container">
@@ -91,11 +80,18 @@
           <div rv-hide="alreadyEncrypted">
             <textinput value="clearText"></textinput>
             <div rv-show="clearText">
-              <recepients selected-keys="selectedKeys"></recepients>
+              <label for="filter">Recepients:</label>
+              <ul class="selected-keys" rv-on-click="recepients.focus">
+                <li class="bead" rv-each-item="recepients.selected"><div class="name">{ item.getPrimaryUser }</div><div class="remove" rv-on-click="recepients.removeFromSelected">✖</div></li>
+                <li><input id="ftr" class="filter" rv-value="recepients.filter" rv-on-keyup="recepients.search"></li>
+              </ul>
+              <ul class="found-keys" rv-show="recepients.hasFound < recepients.found">
+                <li rv-on-click="recepients.moveToSelected" rv-each-item="recepients.found"><span>{ item.getPrimaryUser }</span></li>
+              </ul>
             </div><!-- clearText -->
             <div class="bottom">
               <span rv-show="clearText">
-                <span rv-show="hasSelectedKeys < selectedKeys">
+                <span rv-show="recepients.hasSelected < recepients.selected">
                   <button class="button" rv-disabled="wait" rv-on-click="sendMessage">Encrypt Message <span rv-show="wait"><i class="icon-spin5"></i></span></button>
                   <expiration value="expiration"></expiration>
                 </span>
