Begin working on messages unit test

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -12,6 +12,7 @@
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
     <script src="./bower_components/mocha/mocha.js"></script>
     <script src="./bower_components/expect/index.js"></script>
+    <script src="./bower_components/moment/mim/moment.min.js"></script>
 
     <!-- Code -->
     <script src="src/modules.js"></script>
@@ -20,8 +21,11 @@
     <script src="unittests/lib/init.js"></script>
     <script src="unittests/lib/testkeys.js"></script>
 
+    <!--
     <script src="unittests/addressbook.js"></script>
     <script src="unittests/privatekey.js"></script>
+    -->
+    <script src="unittests/messages.js"></script>
 
     <script src="unittests/lib/run.js"></script>
   </body>
