Add tests for messages

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -12,7 +12,8 @@
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
     <script src="./bower_components/mocha/mocha.js"></script>
     <script src="./bower_components/expect/index.js"></script>
-    <script src="./bower_components/moment/mim/moment.min.js"></script>
+    <script src="./bower_components/moment/min/moment.min.js"></script>
+    <script src="./bower_components/assert/assert.js"></script>
 
     <!-- Code -->
     <script src="src/modules.js"></script>
