Add more unit tests and fix remaining refactored code

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -25,6 +25,7 @@
     <script src="unittests/addressbook.js"></script>
     <script src="unittests/privatekey.js"></script>
     <script src="unittests/messages.js"></script>
+    <script src="unittests/background.js"></script>
 
     <script src="unittests/lib/run.js"></script>
   </body>
