--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -39,8 +39,8 @@
 
     <script type="text/template" data-name="expiration" data-class="Expiration">
       <span class="expiration">
-        <a rv-on-click="toggle" rv-hide="show">expiration</a>
-        <small rv-show="show">
+        <a rv-on-click="toggle" rv-hide="show < value">expiration</a>
+        <small rv-show="show < value">
           <select rv-value="value" rv-on-change="change">
             <option value="600">10 minutes</option>
             <option value="3600">1 hour</option>
@@ -92,7 +92,7 @@
               <span rv-show="clearText">
                 <span rv-show="recepients.hasSelected < selected">
                   <button class="button" rv-disabled="wait" rv-on-click="sendMessage">Encrypt Message <span rv-show="wait"><i class="icon-spin5"></i></span></button>
-                  <expiration value="expiration"></expiration>
+                  <expiration value="timeToLive"></expiration>
                 </span>
               </span>
             </div><!-- .bottom -->
