--- a/chrome/unittests/1.html
+++ b/chrome/unittests/1.html
@@ -25,6 +25,7 @@
     <script src="addressbook.js"></script>
     <script src="privatekey.js"></script>
     <script src="messages.js"></script>
+    <script src="preferences.js"></script>
     <script src="background.js"></script>
 
     <script src="lib/run.js"></script>
