--- a/chrome/unittests/1.html
+++ b/chrome/unittests/1.html
@@ -24,7 +24,7 @@
 
     <script src="addressbook.js"></script>
     <script src="privatekey.js"></script>
-    <script src="messages.js"></script>
+    <script src="api.js"></script>
     <script src="preferences.js"></script>
     <script src="background.js"></script>
 
