--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -72,7 +72,8 @@
 
       <div rv-show="hasPrivateKey">
         <div class="middle short" rv-hide="isDecrypted">
-          <input id="pwd" rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="private key password">
+          <input id="pwd" rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="secret key password">
+          <div class="weak">(Press Enter when you're done)</div>
         </div>
 
         <article rv-show="isDecrypted">
