--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -44,7 +44,7 @@
           <select rv-value="value" rv-on-change="change">
             <option value="600">10 minutes</option>
             <option value="3600">1 hour</option>
-            <option value="86400">1 day</option>
+            <option value="86400">24 hours</option>
             <option value="604800">7 days</option>
             <option value="2592000">30 days</option>
             <option value="0">no expiration</option>
