--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -28,9 +28,7 @@
           <ul class="pure-menu-list">
             <li class="pure-menu-item"><a href="#/key/view" class="pure-menu-link round-link"><i class="icon-key"></i> My Key</a></li>
             <li class="pure-menu-item"><a href="#/pub/list" class="pure-menu-link round-link"><i class="icon-address-book"></i> Address Book</a></li>
-            <!--
-            <li class="pure-menu-item"><a href="#/advanced" class="pure-menu-link round-link"><i class="icon-cog"></i> Advanced</a></li>
-            -->
+            <li class="pure-menu-item"><a href="#/prefs" class="pure-menu-link round-link"><i class="icon-cog"></i> Preferences</a></li>
           </ul>
       </nav>
       <div id="notify" rv-on-click="notify.clear">
