--- a/chrome/unittests/main.html
+++ b/chrome/unittests/main.html
@@ -22,12 +22,9 @@
     <script src="lib/init.js"></script>
     <script src="lib/testkeys.js"></script>
 
-    <script src="addressbook.js"></script>
-    <script src="privatekey.js"></script>
-    <script src="api.js"></script>
-    <script src="preferences.js"></script>
-    <script src="background.js"></script>
+    <script src="main.js"></script>
 
     <script src="lib/run.js"></script>
   </body>
 </html>
+
