--- a/chrome/unittests/content_expire/index.html
+++ b/chrome/unittests/content_expire/index.html
@@ -17,8 +17,8 @@
       <div class="row">
         <div class="col c7">
           <div>
-            <h3>Public Keys</h3>
-            <p id="pk1" class="test">{url}</p>
+            <h3>Expired message</h3>
+            <p id="m1" class="test">{url}</p>
           </div>
         </div>
 
