--- a/chrome/unittests/content_message/index.html
+++ b/chrome/unittests/content_message/index.html
@@ -6,9 +6,9 @@
     <style type="text/css">
       #content { padding: 20px }
     </style>
-    <link href="../../bower_components/mocha/mocha.css" rel="stylesheet" />
-    <script src="../../bower_components/mocha/mocha.js"></script>
-    <script src="../../bower_components/assert/assert.js"></script>
+    <link href="/bower_components/mocha/mocha.css" rel="stylesheet" />
+    <script src="/bower_components/mocha/mocha.js"></script>
+    <script src="/bower_components/assert/assert.js"></script>
 
   </head>
   <body>
