Add expiration tests, fix a small bug

--- a/chrome/unittests/content_keys/index.html
+++ b/chrome/unittests/content_keys/index.html
@@ -27,5 +27,6 @@
     <script src="../lib/params.js"></script>
     <script src="../lib/init.js"></script>
     <script src="code.js"></script>
+    <script src="../lib/signal_run.js"></script>
   </body>
 </html>
