--- a/chrome/unittests/content_expire/index.html
+++ b/chrome/unittests/content_expire/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Keys</title>
+    <title>Expired Messages</title>
     <style type="text/css">
       #content { padding: 20px }
     </style>
@@ -18,7 +18,10 @@
         <div class="col c7">
           <div>
             <h3>Expired message</h3>
-            <p id="m1" class="test">{url}</p>
+            <p id="m1" class="test">{url0}</p>
+
+            <h3>Expires in 2 seconds</h3>
+            <p id="m2" class="test">{url1}</p>
           </div>
         </div>
 
@@ -27,5 +30,6 @@
     <script src="../lib/params.js"></script>
     <script src="../lib/init.js"></script>
     <script src="code.js"></script>
+    <script src="../lib/signal_run.js"></script>
   </body>
 </html>
