Remove prefs and replace with contact form

--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -24,7 +24,7 @@
   <body>
     <div id="container" >
       <nav class="pure-menu pure-menu-horizontal">
-          <span href="#" class="pure-menu-heading"><b>slp</b></span>
+          <span href="#" class="pure-menu-heading"><b>short link privacy</b></span>
           <ul class="pure-menu-list">
             <li class="pure-menu-item"><a href="#/key/view" class="pure-menu-link round-link"><i class="icon-key"></i> My Key</a></li>
             <li class="pure-menu-item"><a href="#/pub/list" class="pure-menu-link round-link"><i class="icon-address-book"></i> Address Book</a></li>
