--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -41,7 +41,7 @@
       <span class="expiration">
         <a rv-on-click="toggle" rv-hide="show < value">expiration</a>
         <small rv-show="show < value">
-          <select rv-value="value" rv-on-change="change">
+          <select rv-value="value">
             <option value="600">10 minutes</option>
             <option value="3600">1 hour</option>
             <option value="86400">24 hours</option>
