Fix some unit tests (using localhost!!!)

--- a/chrome/unittests/content_message/index.html
+++ b/chrome/unittests/content_message/index.html
@@ -30,8 +30,8 @@
             <p id="c1" class="test">front{url}</p>
             <p id="c2" class="test">{url}zzz</p>
             <h3>404</h3>
-            <p id="e1" class="test">http://slp.li/x/56b53ddee365a2380c111111</p>
-            <p id="e2" class="test">http://slp.li/x/56b53ddee365a2380c111111zzz</p>
+            <p id="e1" class="test">http://slp:5000/m/56b53ddee365a2380c111111</p>
+            <p id="e2" class="test">http://slp:5000/m/56b53ddee365a2380c111111zzz</p>
             <h3>Links</h3>
             <p id="l1" class="test"><a href="{url}">{url}</a></p>
             <p id="l2" class="test"><a href="{url}">http://slp.li/x/56b5</a></p>
