--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -77,10 +77,13 @@
         </div>
 
         <article rv-show="isDecrypted">
-          <div rv-show="selectionRequired">
-            Selection required
+          <div rv-show="showSelection">
+            <h3 class="center">Selection required!</h3>
+            <p>This site requires that you select the text that you want encrypted before you open this dialog.</p>
+            <p>Please close this dialog, select the text you would like to encrypt and open this dialog again.</p>
+            <p class="center"><b>Hint:</b> Press Ctrl-A inside the edit box to select all.</p>
           </div>
-          <div rv-hide="selectionRequired">
+          <div rv-hide="showSelection">
             <div rv-hide="alreadyEncrypted">
               <textinput value="clearText"></textinput>
               <div rv-show="clearText">
@@ -106,7 +109,7 @@
               <p>This message has already been encrypted.</p>
               <button class="button" rv-on-click="restoreMessage">Restore original message</button>
             </div><!-- alreadyEncrypted -->
-          </div><!-- selectionRequired -->
+          </div><!-- showSelection -->
         </article><!-- #encrypted-tab -->
 
       </div><!-- hasPrivateKey -->
