--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -79,8 +79,8 @@
         <article rv-show="isDecrypted">
           <div rv-show="showSelection">
             <h3 class="center">Selection required!</h3>
-            <p>This site requires that you select the text that you want encrypted before you open this dialog.</p>
-            <p>Please close this dialog, select the text you would like to encrypt and open this dialog again.</p>
+            <p>This site requires that you select the text that you want to encrypt before you open this dialog.</p>
+            <p>Please close this dialog, select your message with your mouse or keyboard then come back here again.</p>
             <!--
             <p class="center"><b>Hint:</b> Press Ctrl-A inside the edit box to select all.</p>
             -->
