--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -78,12 +78,11 @@
 
         <article rv-show="isDecrypted">
           <div rv-show="showSelection">
-            <h3 class="center">Selection required!</h3>
+            <h3 class="center">Selection Required!</h3>
             <p>This site requires that you select the text that you want to encrypt before you open this dialog.</p>
-            <p>Please close this dialog, select your message with your mouse or keyboard then come back here again.</p>
-            <!--
-            <p class="center"><b>Hint:</b> Press Ctrl-A inside the edit box to select all.</p>
-            -->
+            <p class="center">
+              <button class="button" rv-on-click="close">OK</span></button>
+            </p>
           </div>
           <div rv-hide="showSelection">
             <div rv-hide="alreadyEncrypted">
